[gd_scene load_steps=6 format=3 uid="uid://cqvpx6xwgn3bl"]

[ext_resource type="Script" path="res://Scripts/enemy_3.gd" id="1_abrmj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilogb"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_j54vh"]
radius = 280.016

[sub_resource type="CircleShape2D" id="CircleShape2D_w13xw"]
radius = 196.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mtqat"]
radius = 17.0294

[node name="Enemy3" type="CharacterBody2D"]
script = ExtResource("1_abrmj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.831373, 0, 0.403922, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_ilogb")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(6, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_j54vh")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(6, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_w13xw")
debug_color = Color(1, 0, 0.0705882, 0.419608)

[node name="MeleeRange" type="Area2D" parent="."]
position = Vector2(6, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource("CircleShape2D_mtqat")
debug_color = Color(0.952941, 0, 0.545098, 0.419608)

[node name="FireRate" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(6, 6)

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(14, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="MeleeRange" to="." method="_on_melee_range_body_entered"]
[connection signal="body_exited" from="MeleeRange" to="." method="_on_melee_range_body_exited"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
